# openring

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json
apps/inspector/: index.html  package.json  tsconfig.json  vite.config.ts
apps/inspector/src/: App.tsx  main.tsx  styles.css
apps/inspector/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/inspector/src-tauri/capabilities/: default.json
apps/inspector/src-tauri/icons/: README.md
apps/inspector/src-tauri/src/: ble.rs  lib.rs  main.rs  session.rs
apps/inspector/src/ble/: adapter.ts  index.ts  useBle.ts
apps/inspector/src/components/: DeviceList.tsx  InspectorPane.tsx  MetricsPanel.tsx  PacketDetail.tsx  PacketLog.tsx  RecorderControls.tsx  ServicesTree.tsx  Sidebar.tsx  TimelinePanel.tsx  TopBar.tsx  WriteRow.tsx  icons.tsx
devices/: README.md
devices/optim-ring/: profile.md
docs/: README.md  architecture-v2.md  architecture.md  contributing.md  vision.md
tools/: README.md  decoder-smoke.ts
