[package]
name = "openring-inspector"
version = "0.0.1"
description = "OpenRing Inspector"
authors = ["OpenRing Contributors"]
edition = "2021"

[lib]
name = "openring_inspector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
