[package]
name = "openring-inspector"
version = "0.0.1"
description = "OpenRing Inspector"
authors = ["OpenRing Contributors"]
edition = "2021"

[lib]
name = "openring_inspector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
btleplug = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
tracing = "0.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
